--- a/面试记录.md
+++ b/面试记录.md
@@ -77,7 +77,183 @@
 		GEOMETRY/POINT/LINESTRING/POLYGON，创建空间索引时，使用SPATIAL关键字（MyISAM）
 
 
-#### 常用php 数组函数、string函数
+#### HTTP 三次握手/报文/状态码
+	HTTP是无连接：无连接的含义是限制每次连接只处理一个请求。服务器处理完客户的请求，并收到客户的应答后，即断开连接。采用这种方式可以节省传输时间。
+	HTTP是无状态：无状态是指协议对于事务处理没有记忆能力。缺少状态意味着如果后续处理需要前面的信息，则它必须重传，这样可能导致每次连接传送的数据量增大。
+		
+	HTTP请求报文	
+		请求方法     请求URL    http协议和版本
+		POST	     user.html    HTTP/1.1
+		报文头：	
+			Accept：		请求报文可通过一个“Accept”报文头属性告诉服务端 客户端接受什么类型的响应。 
+			Referer			表示这个请求是从哪个URL过来的
+			code
+			Accept-Language:
+			User-Agent
+			Content-type	表示后面的文档属于什么MIME类型
+			Host：
+			Content-length
+			Connection
+			Cache-Control	缓存进行控制
+					private:             客户端可以缓存
+					public:              客户端和代理服务器都可缓存（前端的同学，可以认为public和private是一样的）
+					max-age=xxx:   缓存的内容将在 xxx 秒后失效
+					no-cache:          需要使用对比缓存来验证缓存数据
+					no-store:           所有内容都不会缓存
+			Cookie:			客户端的Cookie就是通过这个报文头属性传给服务端的
+		报文体：
+			name=tom&material_id=199&staff=123
+	HTTP响应报文		
+		HTTP/1.1  200OK
+		响应头
+			Server：
+			Content-type：	表示后面的文档属于什么MIME类型
+			Transfer-Encoding
+			Date
+		响应体：{'errCode':'0','msg':'ok'}
+	相应状态码
+		1xx 消息，一般是告诉客户端，请求已经收到了，正在处理，别急...
+		2xx 处理成功，一般表示：请求收悉、我明白你要的、请求已受理、已经处理完成等信息.
+		3xx 重定向到其它地方。它让客户端再发起一个请求以完成整个处理。
+		4xx 处理发生错误，责任在客户端，如客户端的请求一个不存在的资源，客户端未被授权，禁止访问等。
+		5xx 处理发生错误，责任在服务端，如服务端抛出异常，路由出错，HTTP版本不支持等。
+			200 找到资源，正常   302/307 临时重定向   304 在上次请求后没有任何修改  用户浏览器缓存
+			401	客户端无权访问  403 客户端未能获得授权   404  资源不存在    500  内部服务器错误
+	在TCP/IP协议中，TCP协议提供可靠的连接服务，采用三次握手建立一个连接。 
+		第一次握手：建立连接时，客户端发送syn包(syn=j)到服务器，并进入SYN_SEND状态，等待服务器确认； 
+		第二次握手：服务器收到syn包，必须确认客户的SYN（ack=j+1），同时自己也发送一个SYN包（syn=k），即SYN+ACK包，此时服务器进入SYN_RECV状态； 
+		第三次握手：客户端收到服务器的SYN＋ACK包，向服务器发送确认包ACK(ack=k+1)，此包发送完毕，客户端和服务器进入ESTABLISHED状态，完成三次握手。 
+
+#### 负载均衡/session共享
+	解决方案：
+		1、使用客户端的cookie作为存放登录信息的媒介
+			优点：简单、方便、容易操作、不会增加数据库负担
+			缺点：cookie禁用无法同步session，cookie安全性不足，很容易外部被伪造使用
+		2、使用mysql存储session
+			将session存放在同一个数据库里面，每次访问的时候，我们去数据库check一下是否有这个session或者这个session是否过期，然后就可以进行多台服务器的session同步了；
+			缺点：增大数据库的IO，每次访问都需要拦截请求、查询数据库，导致多一层访问的业务层以及浪费读取数据库session时间；
+		3、	使用memcache或者redis等缓存机制存放session
+			原理是项目都使用同一个地方的memcache或redis缓存，用户登录时，把session放入缓存，之后不管访问的是项目的那一台服务器，都会从同一个地方去获取session缓存，这样就很轻松实现了session同步；
+			优点：不增加数据库负担，也不用手动去判断session是否存在或过期，省去部分业务逻辑
+					redis缓存存放与服务器端，安全性大大提高
+			缺点：memcache或redis把内存分成很多种规格的存储块，有块就有大小，这种方式也就决定了，memcache或redis不能完全利用内存，会产生内存碎片，
+					如果存储块不足，还会产生内存溢出。	
+		4、ip_hash
+			nginx中的ip_hash技术能够将某个ip的请求固定到同一台后端应用服务器，这样一来这个ip下的某个客户端和某个后端就能建立起稳固的session
+			 缺点：使用ip_hash进行session共享，它的原理是为每个访问者提供一个固定的访问ip，让用户只能在当前访问的服务器上进行操作，保持了session同步的，但是也造成了负载不均衡的问题，如果当前用户访问的服务器挂了的话，
+			 那就会出现问题了；
+			 
+			 
+#### 几个连续的问题
+	* like %xxx 会不会用到普通索引  like xyz%会不会用到索引?
+		like %xxx 不会用到普通索引  like xyz%会用到
+		所以当模糊查询时，尽量使用后置的通配符
+	
+	* 类的克隆/和类对象的赋值的区别
+		$a = new aclass();
+		$b = $a;
+		$c = &a;
+		$d = clone $a;
+		他们三个$a/$b/$c都是指向同一个对象的，也就是同一块内存。	
+		$a 和 $d 不指向同一块内存
+		
+	* protected/private/public	
+		public  全局   内部/外部/子类 都可以访问
+				子类中可以通过 self::属性名/方法名 调用 public方法和属性
+				parent::方法名  调用父类方法
+		
+		protected 受保护的  只有本类/子类/父类中可以访问
+				子类中可以通过  self::属性名 调用 protected方法或属性
+				parent::属性名/方法名 调用父类方法
+				不能通过 $obj->属性名 来调用  protected方法或属性
+		
+		private 私有   只有类本部可以使用
+
+	* self 和 parent 区别：
+		在子类中常用到这两个对像。他们的主要区别在于self可以调用父类中的公有或受保护的属性，但parent不可以调用
+		self:: 它表示当前类的静态成员(方法和属性)与 $this不同,$this是指当前对像
+		
+	* 复合索引，什么时候使用	
+		CREATE INDEX columnId ON table1(col1,col2,col3) ;
+		select * from table1 where col1= A and col2= B and col3 = C
+		1、对于复合索引,在查询使用时,最好将条件顺序按找索引的顺序,这样效率最高;    
+		   如果使用后两个列而不用第一列，将不会使用索引
+		2、复合索引会替代单一索引么     
+			如果索引满足窄索引的情况下可以建立复合索引,这样可以节约空间和时间   
+		3、如果查询条件需要,可以在已有单索引 on col1的情况下,添加复合索引on (col1,col2),对于效率有一定的提高；     
+		
+	*什么情况下索引会失效	
+		在where子句中进行null值判断的话会导致引擎放弃索引而产生全表扫描
+			SELECT id FROM table WHERE num is null
+		避免在where子句中使用!= ,< >这样的符号,否则会导致引擎放弃索引而产生全表扫描
+			SELECT id FROM table WHERE num != 0
+		避免在where子句中使用or来连接条件,因为如果俩个字段中有一个没有索引的话,引擎会放弃索引而产生全表扫描	
+			SELECT id FROM table WHERE num = 0 OR num = 1
+		in中多于两个值，不走索引	
+		避免在where子句中=的左边使用表达式操作或者函数操作
+		函数操作
+		避免在where子句中使用like模糊查询
+		在使用联合索引是要注意最左原则,例如如果当前联合索引是index(a,b,c),那么如果where子句中有a就会用到联合索引,但是如果只用到b,c就会失去索引效果
+		如果列类型是字符串，那一定要在条件中将数据使用引号引用起来,否则不使用索引	
+		对于多列索引（复合索引），不是使用的第一部分，则不会使用索引
+	
+	* 单例模式和工厂模式的原理和实现
+		单例模式：
+			要求某一列能够有返回对象一个引用（永远是一个）和一个获得该实例的方法（必须是静态方法）
+			使用场景：
+				1.需要频繁的进行创建和销毁的对象；
+				2.创建对象时耗时过多或耗费资源过多，但又经常用到的对象；
+				3.工具类对象；
+				4.频繁访问数据库或文件的对象。
+			“饿汉式”是在不管你用的用不上，一开始就建立这个单例对象：比如：有个单例对象
+			“懒汉式”是在你真正用到的时候才去建这个单例对象
+			private static class SingleInstance{
+				private final static Singleton ins =  new Singleton();
+			}
+		工厂模式：
+			在工厂方法模式中，核心的工厂类不再负责所有的产品的创建，而是将具体创建的工作交给子类去做。
+			该核心类成为一个抽象工厂角色，仅负责给出具体工厂子类必须实现的接口，而不接触哪一个产品类应当被实例化这种细节
+			class demo1{}  class demo2{}
+			class Factory{
+				static function createObject($className){
+					return new $className();
+				}
+			}
+			$demo = Factory::createObject("demo1");
+			$demo = Factory::createObject("demo2");
+	
+	* PHP curl
+		curl_init()   初始化 curl连接
+		curl_close()	关闭curl连接
+		curl_exec()		执行curl请求
+		curl_getinfo()	函数获取CURL请求输出的相关信息
+		curl_setopt()	设定CURL函数库定义的选项来定制HTTP请求
+			CURLOPT_URL 	指定请求的URL
+			CURLOPT_RETURNTRANSFER		设置为1表示稍后执行的curl_exec函数的返回是URL的返回字符串，而不是把返回字符串定向到标准输出并返回TRUE；
+			CURLLOPT_HEADER		设置为0表示不返回HTTP头部信息
+			CURLOPT_AUTOREFERER		TRUE 时将根据 Location: 重定向时，自动设置 header 中的Referer:信息。
+			CURLOPT_VERBOSE		TRUE 会输出所有的信息，写入到STDERR，或在CURLOPT_STDERR中指定的文件。
+			CURLOPT_CONNECTTIMEOUT 	在尝试连接时等待的秒数。设置为0，则无限等待
+			CURLOPT_SSL_VERIFYPEER	FALSE 禁止 cURL 验证对等证书（peer's certificate）
+			
+	*  堆/栈/队列		
+		堆栈  后进先出 LIFO
+			class Test{
+				$arr = array();
+				array_push('data');
+				array_push('res');
+				$res = array_pop();
+			}
+		队列  先进后出 FIFO
+			class Test{
+				$arr = array();
+				array_unshift($arr, "dada");
+				array_unshift($arr, "hh");
+				$res = arr_shift($arr);
+				print_r($res);
+			}
+	
+#### 常用php 数组函数、string函数、常用文件/图片处理函数  背下来
 		array()                        创建数组
 		array_chunk()             把一个数组分割为新的数组块
 		array_column()           返回数组中某个单一列的值
@@ -118,36 +294,96 @@
 		explode()              指定分割字符串返回数组
 		implode()              数组拼接字符串
 		
+		文本处理函数：
+			fopen(filename,mode,include_path,context)
+				mode
+					r	只读，文件指针指向文件头	r+  读写
+					w   写入/文件指针指向文件头并将文件大小截为零/不存在则创建  	w+  读写方式
+					a   写入/文件指针指向文件末尾    a+  读写
+			copy()	复制文件
+			disk_free_space()	返回目录的可用空间
+			file_exists() 检查文件或目录是否存在。
+			file_get_contents() 将文件读入字符串。
+			file_put_contents() 将字符串写入文件。
+			filesize() 返回文件大小。
+			filetype() 返回文件类型。
+			is_writable() 判断文件是否可写。
+			unlink() 删除文件。
+			chmod() 改变文件模式。
 		
-#### 什么情况下索引会失效	
-	在where子句中进行null值判断的话会导致引擎放弃索引而产生全表扫描
-		SELECT id FROM table WHERE num is null
-	避免在where子句中使用!= ,< >这样的符号,否则会导致引擎放弃索引而产生全表扫描
-		SELECT id FROM table WHERE num != 0
-	避免在where子句中使用or来连接条件,因为如果俩个字段中有一个没有索引的话,引擎会放弃索引而产生全表扫描	
-		SELECT id FROM table WHERE num = 0 OR num = 1
-	in中多于两个值，不走索引	
-	避免在where子句中=的左边使用表达式操作或者函数操作
-	函数操作
-	避免在where子句中使用like模糊查询
-	在使用联合索引是要注意最左原则,例如如果当前联合索引是index(a,b,c),那么如果where子句中有a就会用到联合索引,但是如果只用到b,c就会失去索引效果
-	如果列类型是字符串，那一定要在条件中将数据使用引号引用起来,否则不使用索引	
+		图片处理流程：
+			file_uploads = On 打开文件上传
+			upload_max_filesize = 2M最大上传大小
+			max_file_uploads = 20单次最大上传文件数
+			
+			$_FILES["file"]["error"] > 0
+			type/size/name/tmp_name
+			file_exists()
+			mkdir()
+			chmod()
+			move_uploaded_file()
+			
+		常用linux操作指令：
+			tail -10 查看尾部的10行
+			head -20 查看文件头部的20行
+			more/less  分页看/能回翻
+			ln	建立链接文件
+			grep [options] PATTERN [FILE...]
+				PATTERN 是查找条件：可以是普通字符串、可以是正则表达式，通常用单引号将RE括起来。
+				FILE 是要查找的文件，可以是用空格间隔的多个文件，也可是使用Shell的通配符在多个文件中查找PATTERN，省略时表示在标准输入中查找。
+				grep命令不会对输入文件进行任何修改或影响，可以使用输出重定向将结果存为文件
+			chmod	修改文件权限	
+			系统管理类：
+				stat	显示指定文件的详细信息
+				uname	显示系统信息
+				top     动态显示当前耗费资源最多的进程信息
+				ps      显示瞬间进程状态 ps -aux
+				du      查看目录大小  du -h /home 带有单位显示目录信息
+				df      查看磁盘大小
+				ifconfig	查看网络情况
+				netstat		显示网络状态	
 		
 		
+#### 对面试官（技术）的提问，对hr的提问（普通公司次要）	
+	职责
+		我的日常工作是什么？
+		自己单独的开发活动和按部就班工作的比例大概是怎样的？
+		在你看来，这个工作做到什么程度算成功？
+		我入职的岗位是新增还是接替之前离职的同事？
+		入职之后在哪个项目组，项目是新成立还是已有的？
+	技术	
+		公司常用的技术栈是什么?
+		你们怎么使用源码控制系统？
+		你们怎么测试代码？
+		你们怎么追踪 bug?
+		你们如何准备故障恢复？
+		有标准的开发环境吗？是强制的吗？
+	团队	
+		工作是怎么组织的？
+		团队内/团队间的交流通常是怎样的？
+		公司技术团队的架构和人员组成
+		有没有一些团队正在经历还尚待解决的挑战？
+		您在这工作了多久了？您觉得体验如何？
+	商业	
+		你们现在盈利吗？如果没有的话，还需要多久？
+		你们的竞争优势？
 		
+	hr
+		直接询问HR自己的之前的面试情况和能力有哪些还不符合公司和岗位的要求
+		可以询问公司和个人在公司可能经历的前景	
+		可以反过来问HR，为什么会留在这个公司	
+		加班是否可以调休
+		带薪休假时间有多久？
+		五险一金/入职是否有
 		
+		1.工作体验类	
+		2.工作内容类	
+		3.培训准备类	
+		4.面试表现类   还需要提升哪些地方才能升任	
 		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
+#### 攻克过哪些难点
+		根据手册 对接微信，微信小程序开发
+		自己研究第三方登录
 		
 		
 		
