--- a/php/面试记录.md
+++ b/php/面试记录.md
@@ -144,7 +144,8 @@
 			 那就会出现问题了；
 			 
 			 
-#### 几个连续的问题
+			 
+#### 几个连续的问题|常见面试题
 	* like %xxx 会不会用到普通索引  like xyz%会不会用到索引?
 		like %xxx 不会用到普通索引  like xyz%会用到
 		所以当模糊查询时，尽量使用后置的通配符
@@ -252,6 +253,42 @@
 				$res = arr_shift($arr);
 				print_r($res);
 			}
+	* 数据库设计范式
+		第一范式：
+			属性具有原子性，不可再分解，表中不能有表    不可分解
+		第二范式：
+			唯一性约束，每条记录有唯一标识，所有的非主键字段均需依赖于主键字段   非主键依赖主键
+		第三范式：
+			冗余性约束，非主键字段间不能相互依赖      非主键不能相互依赖
+			
+	* 常见安全问题
+		跨站脚本攻击 XSS
+			利用网页开发时留下的漏洞，通过巧妙的方法注入恶意指令代码到网页，使用户加载并执行攻击者恶意制造的网页程序
+				类别：
+					反射型 XSS：简单地将用户输入的数据反射给浏览器
+					存储型 XSS：把用户输入的数据存储在服务器端
+					DOM Based XSS：修改页面 DOM 节点形成的 XSS
+				防御：
+					为 Cookie 设置 HttpOnly，避免 Cookie 被劫持泄露
+					对输入/输出进行检查，明确编码方式
+		跨站点请求伪造(CSRF)
+			是一种挟制用户在当前已登录的 Web 应用程序上执行非本意的操作的攻击方法
+			CSRF 防御
+				增加验证码(简单有效)
+				检查请求来源是否合法
+				增加随机 token
+		SQL 注入
+			输入的字符串中注入 SQL 指令，若程序当中忽略了字符检查，导致恶意指令被执行而遭到破坏或入侵
+			SQL 注入防御
+				使用预编译语句绑定变量(最佳方式)
+				使用安全的存储过程(也可能存在注入问题)
+				检查输入数据的数据类型(可对抗注入)
+				数据库最小权限原则
+		DDOS
+			又称为分布式拒绝服务。DDOS 本是利用合理的请求造成资源过载，导致服务不可用
+	
+	
+	
 	
 #### 常用php 数组函数、string函数、常用文件/图片处理函数  背下来
 		array()                        创建数组
