--- a/php/魔术常量 超全局变量 魔术方法.md
+++ b/php/魔术常量 超全局变量 魔术方法.md
@@ -44,10 +44,49 @@
 		$_GET 也可以收集URL中发送的数据。
 	
 	
+#### php 魔术方法
+	__sleep()   __wakeup()
+		serialize() 会检查类中是否存在 __sleep()。
+			如果存在，该方法会先被调用，然后才执行序列化操作。
+		unserialize() 会检查是否存在一个 __wakeup() 方法。
+			如果存在，则会先调用 __wakeup 方法，预先准备对象需要的资源。
+		__wakeup() 经常用在反序列化操作中，例如重新建立数据库连接，或执行其它初始化操作。
 	
-	
-	
-	
-	
-
+	__toString()
+		方法用于一个类被当成字符串时应怎样回应。  echo $obj
+		
+	__invoke()	
+		当尝试以调用函数的方式调用一个对象时，__invoke() 方法会被自动调用。
+	__set_state()	
+		起当调用 var_export() 导出类时，此静态 方法会被调用。
+		
+	__debugInfo()	  PHP 5.6.0.
+		
+	__set()	
+	在给不可访问属性赋值时，__set() 会被调用。
+	__get()
+	读取不可访问属性的值时，__get() 会被调用。
+	__isset()
+	当对不可访问属性调用 isset() 或 empty() 时，__isset() 会被调用。
+	__unset()
+	当对不可访问属性调用 unset() 时，__unset() 会被调用。	
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
 
