--- a/php/面试记录.md
+++ b/php/面试记录.md
@@ -185,7 +185,7 @@
 		
 	*什么情况下索引会失效	
 		在where子句中进行null值判断的话会导致引擎放弃索引而产生全表扫描
-			SELECT id FROM table WHERE num is null
+			SELECT id FROM table WHERE num is null/is not null
 		避免在where子句中使用!= ,< >这样的符号,否则会导致引擎放弃索引而产生全表扫描
 			SELECT id FROM table WHERE num != 0
 		避免在where子句中使用or来连接条件,因为如果俩个字段中有一个没有索引的话,引擎会放弃索引而产生全表扫描	
@@ -193,6 +193,7 @@
 		in中多于两个值，不走索引	
 		避免在where子句中=的左边使用表达式操作或者函数操作
 		函数操作
+		字符串不加单引号会导致索引失效
 		避免在where子句中使用like模糊查询
 		在使用联合索引是要注意最左原则,例如如果当前联合索引是index(a,b,c),那么如果where子句中有a就会用到联合索引,但是如果只用到b,c就会失去索引效果
 		如果列类型是字符串，那一定要在条件中将数据使用引号引用起来,否则不使用索引	
